MIFOSX-119: basic CRUD outline for sms outbound messages for platform. no specific attempt at using third party lib or service to actually send an SMS included here.